--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=Projeto-Cadastro-Spring
+spring.application.name = Projeto-Cadastro-Spring
+
+# Database
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+#Configurações do JPA // HIBERNATES
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+ole.enabled=true
