--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,12 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-#Configurações do JPA // HIBERNATES
+# Configurações do JPA // HIBERNATES
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-ole.enabled=true
+
+# Configurar o flyway
+spring.flymay.enable=true
+spring.flymay.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
